force-app/main/default/objects/Invoice__c/fields/Account_Classification_TI__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification_TI__c</fullName>
    <label>Account Classification (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>