force-app/main/default/objects/Invoice__c/fields/Account_ID_TI__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_TI__c</fullName>
    <label>Account ID (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>