force-app/main/default/objects/Invoice__c/fields/Address_Single_Line__c.field-meta.xml
<CustomField>
    <fullName>Address_Single_Line__c</fullName>
    <formula>IF( Opportunity_Name__r.Account.RecordType.Name == &apos;Investors &amp; Intermediary&apos;,
Opportunity_Name__r.Account.ShippingStreet &amp; &quot;,&quot; &amp;Opportunity_Name__r.Account.ShippingCity&amp; &quot;,&quot; &amp; Opportunity_Name__r.Account.ShippingCountry,
Opportunity_Name__r.BillingAddress__r.Billing_Street__c &amp; &quot;,&quot; &amp; Opportunity_Name__r.BillingAddress__r.Billing_City__c &amp; &quot;,&quot; &amp; TEXT(Opportunity_Name__r.BillingAddress__r.BillingCountry__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Single Line</label>
    <type>Text</type>
</CustomField>