force-app/main/default/objects/Invoice__c/fields/Address_Single_Line_TI__c.field-meta.xml
<CustomField>
    <fullName>Address_Single_Line_TI__c</fullName>
    <label>Address Single Line (Backend Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>