force-app/main/default/objects/Invoice__c/fields/Address_TI__c.field-meta.xml
<CustomField>
    <fullName>Address_TI__c</fullName>
    <label>Address (Backend Field)</label>
    <type>TextArea</type>
</CustomField>