force-app/main/default/objects/Invoice__c/fields/Address_TI_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_TI_Formula__c</fullName>
    <formula>SUBSTITUTE(Address_TI__c, &quot;&lt;br&gt;&quot;, &quot; &quot;)</formula>
    <label>Address (Locked)</label>
    <type>Text</type>
</CustomField>