force-app/main/default/objects/Invoice__c/fields/Advance_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Advance_Billing_Status__c</fullName>
    <label>Advance Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Advance billing practice</fullName>
            </value>
            <value>
                <fullName>Old billing practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>