force-app/main/default/objects/Invoice__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>Created_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>