force-app/main/default/objects/Invoice__c/fields/Age_TI__c.field-meta.xml
<CustomField>
    <fullName>Age_TI__c</fullName>
    <label>Invoice Age (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>