force-app/main/default/objects/Invoice__c/fields/Auto_Generated_Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated_Proforma_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The invoice generated from the T-Logic</description>
    <label>Auto Generated Proforma Invoice</label>
    <type>Checkbox</type>
</CustomField>