force-app/main/default/objects/Invoice__c/fields/Auto_Generated_Tax_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated_Tax_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to mark the invoice that is created automatically via T Logic with status as &apos;Initiate Tax Invoice&apos;</description>
    <label>Auto Generated Tax Invoice</label>
    <type>Checkbox</type>
</CustomField>