force-app/main/default/objects/Invoice__c/fields/Bill_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Due_Date__c</fullName>
    <formula>Opportunity_Name__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Due Date</label>
    <type>Date</type>
</CustomField>