force-app/main/default/objects/Invoice__c/fields/Bill_Due_Date_TI__c.field-meta.xml
<CustomField>
    <fullName>Bill_Due_Date_TI__c</fullName>
    <label>Bill Due Date (Locked)</label>
    <type>Date</type>
</CustomField>