force-app/main/default/objects/Invoice__c/fields/Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_No__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(Opportunity_Name__r.Already_Invoiced__c,&apos;Yes&apos;),
Opportunity_Name__r.RecordType.Name ==&apos;Surveillance&apos;),
Opportunity_Name__r.Past_Invoice_Number__c ,

IF(
AND(
RecordType.Name ==&apos;Invoice&apos;,
ISPICKVAL(Invoice_Status__c,&apos;Proforma Invoice&apos;)
),
Name,

IF(
AND(
RecordType.Name ==&apos;Invoice&apos;,
ISPICKVAL(Invoice_Status__c,&apos;Initiate Tax Invoice&apos;),
Auto_Generated_Tax_Invoice__c,
NOT(ISPICKVAL(Initiate_Tax_Invoice_Status__c,&apos;ITI Approved&apos;))),
Name,

IF(
AND(
RecordType.Name ==&apos;Invoice&apos;,
NOT(ISBLANK(TEXT(Invoice_Status__c))),
NOT(ISPICKVAL(Invoice_Status__c,&apos;Proforma Invoice&apos;)),
OR(
AND(Auto_Generated_Tax_Invoice__c,
ISPICKVAL(Initiate_Tax_Invoice_Status__c,&apos;ITI Approved&apos;)), 
!Auto_Generated_Tax_Invoice__c
)
),Service_Code__c+&apos;/&apos;+Opportunity_Name__r.Opp_ICRA_Branch__r.Branch_Code__c +&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c),&apos;&apos;))
))</formula>
    <label>Bill No</label>
    <type>Text</type>
</CustomField>