force-app/main/default/objects/Invoice__c/fields/Bill_No_CreditNote__c.field-meta.xml
<CustomField>
    <fullName>Bill_No_CreditNote__c</fullName>
    <formula>if( AND(NOT(ISBLANK(Invoice_No__c)),RecordType.Name == &apos;Credit Note&apos;),Invoice_No__r.Bill_No__c,Bill_No__c)</formula>
    <label>Bill No CN</label>
    <type>Text</type>
</CustomField>