force-app/main/default/objects/Invoice__c/fields/Bill_No_CreditNote_TI__c.field-meta.xml
<CustomField>
    <fullName>Bill_No_CreditNote_TI__c</fullName>
    <label>Bill No CN (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>