force-app/main/default/objects/Invoice__c/fields/Bill_Year_TI__c.field-meta.xml
<CustomField>
    <fullName>Bill_Year_TI__c</fullName>
    <label>Bill Year (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>