force-app/main/default/objects/Invoice__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <label>Billing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>