force-app/main/default/objects/Invoice__c/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to bypass the validation</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>