force-app/main/default/objects/Invoice__c/fields/Cancel_IRN__c.field-meta.xml
<CustomField>
    <fullName>Cancel_IRN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel IRN</label>
    <type>Checkbox</type>
</CustomField>