force-app/main/default/objects/Invoice__c/fields/CGST_Amount_on_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_on_Credit_Note__c</fullName>
    <formula>IF(OR(ISPICKVAL(Credit_Note_Type__c, &apos;Commercial&apos;),
Account_Classification__c=&apos;Export&apos;),0,Credit_Note__c *  CGST_Rate_for_Invoice_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount on Credit Note</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>