force-app/main/default/objects/Invoice__c/fields/CGST_Amount_on_Credit_Note_TI__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_on_Credit_Note_TI__c</fullName>
    <label>CGST Amount on Credit Note (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>