force-app/main/default/objects/Invoice__c/fields/CGST_Rate_for_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_for_Invoice_Amount__c</fullName>
    <formula>IF(OR((Account_Classification__c==&apos;SEZ Without Tax&apos;),(Account_Classification__c==&apos;Export&apos;)),0,
IF(  Opportunity_Name__r.Account.RecordType.Name  ==&apos;Issuer&apos;,
IF(TEXT(Opportunity_Name__r.BillingAddress__r.BillingState__c) == TEXT(Opportunity_Name__r.Opp_ICRA_Branch__r.State__c),
0.09,
0),
IF(Opportunity_Name__r.Account.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,
IF(Opportunity_Name__r.Account.ShippingState == TEXT(Opportunity_Name__r.Opp_ICRA_Branch__r.State__c),
0.09,
0),
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Rate for Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>