force-app/main/default/objects/Invoice__c/fields/CGST_Rate_on_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_on_Credit_Note__c</fullName>
    <formula>IF(ISPICKVAL(Credit_Note_Type__c, &apos;Commercial&apos;),0,CGST_Rate_for_Invoice_Amount__c *100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Rate on Credit Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>