force-app/main/default/objects/Invoice__c/fields/CGST_Rate_on_Credit_Note_TI__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_on_Credit_Note_TI__c</fullName>
    <label>CGST Rate on Credit Note (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>