force-app/main/default/objects/Invoice__c/fields/Check_Current_Year_Reference__c.field-meta.xml
<CustomField>
    <fullName>Check_Current_Year_Reference__c</fullName>
    <label>Check Current Year Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>