force-app/main/default/objects/Invoice__c/fields/Check_Current_Year_TI__c.field-meta.xml
<CustomField>
    <fullName>Check_Current_Year_TI__c</fullName>
    <label>Check Current Year (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>