force-app/main/default/objects/Invoice__c/fields/Client_Mail_Address_To__c.field-meta.xml
<CustomField>
    <fullName>Client_Mail_Address_To__c</fullName>
    <formula>Opportunity_Name__r.Client_Mail_Address_To__c</formula>
    <label>Client Mail Address (To)</label>
    <type>Text</type>
</CustomField>