force-app/main/default/objects/Invoice__c/fields/Contact_Designation_Copy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Designation_Copy__c</fullName>
    <label>Contact Designation Copy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>