force-app/main/default/objects/Invoice__c/fields/Contact_Designation_TI__c.field-meta.xml
<CustomField>
    <fullName>Contact_Designation_TI__c</fullName>
    <label>Contact Designation (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>