force-app/main/default/objects/Invoice__c/fields/Contact_Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Verified__c</fullName>
    <label>Contact Name Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>