force-app/main/default/objects/Invoice__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>IF( RecordType.Name == &apos;Credit Note&apos;, Credit_Note_Created_Date__c ,Invoice_Created_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>