force-app/main/default/objects/Invoice__c/fields/Created_Date_TI__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_TI__c</fullName>
    <label>Created Date (Locked)</label>
    <type>Date</type>
</CustomField>