force-app/main/default/objects/Invoice__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <formula>Invoice_No__r.Total_Invoice_Taxable_Amount__c -   Revised_agreed_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>