force-app/main/default/objects/Invoice__c/fields/Credit_Note_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Credit Note Date</label>
    <type>Date</type>
</CustomField>