force-app/main/default/objects/Invoice__c/fields/Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Date__c</fullName>
    <formula>Text(DAY(Credit_Note_Created_Date__c))+&apos;/&apos;+TEXT(MONTH(Credit_Note_Created_Date__c))+&apos;/&apos;+TEXT(YEAR(Credit_Note_Created_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Date</label>
    <type>Text</type>
</CustomField>