force-app/main/default/objects/Invoice__c/fields/Credit_Note_Discount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Discount__c</fullName>
    <label>Credit Note Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>