force-app/main/default/objects/Invoice__c/fields/Credit_Note_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_End_Date__c</fullName>
    <label>Credit Note End Date</label>
    <type>Date</type>
</CustomField>