force-app/main/default/objects/Invoice__c/fields/Credit_Note_No__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_No__c</fullName>
    <formula>IF(RecordType.Name == &apos;Credit Note&apos;,IF(ISPICKVAL(Credit_Note_Type__c,&apos;GST Credit Note&apos;),
&apos;CN/&apos;+Opportunity_Name__r.Opp_ICRA_Branch__r.Branch_Code__c+&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c),
&apos;CCN/&apos;+Opportunity_Name__r.Opp_ICRA_Branch__r.Branch_Code__c+&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c)),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note No</label>
    <type>Text</type>
</CustomField>