force-app/main/default/objects/Invoice__c/fields/Credit_Note_No_TI__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_No_TI__c</fullName>
    <label>Credit Note No (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>