force-app/main/default/objects/Invoice__c/fields/Credit_Note_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Start_Date__c</fullName>
    <label>Credit Note Start Date</label>
    <type>Date</type>
</CustomField>