force-app/main/default/objects/Invoice__c/fields/Credit_Note_TI__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_TI__c</fullName>
    <label>Credit Note Amount (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>