force-app/main/default/objects/Invoice__c/fields/Credit_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Type__c</fullName>
    <label>Credit Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>GST Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>