force-app/main/default/objects/Invoice__c/fields/Credit_Note_VoD__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_VoD__c</fullName>
    <label>Credit Note VoD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>