force-app/main/default/objects/Invoice__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>TEXT( Opportunity_Name__r.CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>