force-app/main/default/objects/Invoice__c/fields/Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Exchange_Rate__c</fullName>
    <label>Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>