force-app/main/default/objects/Invoice__c/fields/Currency_TI__c.field-meta.xml
<CustomField>
    <fullName>Currency_TI__c</fullName>
    <label>Currency (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>