force-app/main/default/objects/Invoice__c/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <formula>IF( Opportunity_Name__r.Account.RecordType.Name == &apos;Investors &amp; Intermediary&apos;,Opportunity_Name__r.Account.ShippingCountry,TEXT(Opportunity_Name__r.BillingAddress__r.BillingCountry__c))</formula>
    <label>Customer Country</label>
    <type>Text</type>
</CustomField>