force-app/main/default/objects/Invoice__c/fields/Customer_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Customer_GSTIN__c</fullName>
    <formula>Opportunity_Name__r.BillingAddress__r.GSTN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer GSTIN</label>
    <type>Text</type>
</CustomField>