force-app/main/default/objects/Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(Opportunity_Name__r.Bill_To__c != null,Opportunity_Name__r.Bill_To__r.Name,Opportunity_Name__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>