force-app/main/default/objects/Invoice__c/fields/Customer_Name_TI__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_TI__c</fullName>
    <label>Customer Name (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>