force-app/main/default/objects/Invoice__c/fields/Customer_Pan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pan__c</fullName>
    <formula>Opportunity_Name__r.PAN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PAN</label>
    <type>Text</type>
</CustomField>