force-app/main/default/objects/Invoice__c/fields/Customer_State_Code_TI__c.field-meta.xml
<CustomField>
    <fullName>Customer_State_Code_TI__c</fullName>
    <label>Customer State Code (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>