force-app/main/default/objects/Invoice__c/fields/Defer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Defer_Opportunity__c</fullName>
    <formula>IF(Opportunity_Name__r.RecordType.Name ==&apos;New Business&apos;,false,
IF(ISPICKVAL(Opportunity_Name__r.Defer_Billing_or_Exit_Case__c,&apos;To Be Billed&apos;),false,
IF(ISPICKVAL(Opportunity_Name__r.Defer_Billing_or_Exit_Case__c,&apos;Already Billed&apos;),false,true)))</formula>
    <label>Deferred Opportunity</label>
    <type>Checkbox</type>
</CustomField>