force-app/main/default/objects/Invoice__c/fields/Deferred_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Opportunity__c</fullName>
    <formula>IF(Opportunity_Name__r.RecordType.Name == &apos;Surveillance&apos;,
   IF(ISPICKVAL(Opportunity_Name__r.Defer_Billing_or_Exit_Case__c,&apos;To Be Billed&apos;),false,true)
,false)</formula>
    <label>Deferred Opportunity</label>
    <type>Checkbox</type>
</CustomField>