force-app/main/default/objects/Invoice__c/fields/Deferred_Opportunity_TI__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Opportunity_TI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deferred Opportunity (Locked)</label>
    <type>Checkbox</type>
</CustomField>