force-app/main/default/objects/Invoice__c/fields/Description_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Service__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Business_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description of Service</label>
    <type>Text</type>
</CustomField>