force-app/main/default/objects/Invoice__c/fields/Description_of_Service_TI__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Service_TI__c</fullName>
    <label>Description of Service (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>