force-app/main/default/objects/Invoice__c/fields/Destination_Branch__c.field-meta.xml
<CustomField>
    <fullName>Destination_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Inter Branch</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>