force-app/main/default/objects/Invoice__c/fields/Download_PI_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Download_PI_Invoice__c</fullName>
    <formula>HYPERLINK(&quot;https://icra.lightning.force.com/apex/ICRA_Invoice_pdf?ID=&quot;&amp; Id ,&quot;Click to Download PI Invoice&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download PI Invoice</label>
    <type>Text</type>
</CustomField>