force-app/main/default/objects/Invoice__c/fields/Download_PI_Invoice_TI__c.field-meta.xml
<CustomField>
    <fullName>Download_PI_Invoice_TI__c</fullName>
    <label>Download PI Invoice (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>