force-app/main/default/objects/Invoice__c/fields/Dsc_Sign__c.field-meta.xml
<CustomField>
    <fullName>Dsc_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dsc Sign</label>
    <type>Checkbox</type>
</CustomField>