force-app/main/default/objects/Invoice__c/fields/Email_Send_at__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_at__c</fullName>
    <label>Email Send at</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90Days</fullName>
            </value>
            <value>
                <fullName>180Days</fullName>
            </value>
            <value>
                <fullName>1year</fullName>
            </value>
            <value>
                <fullName>After 1year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>