force-app/main/default/objects/Invoice__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <description>to store the date on which email is sent to the client</description>
    <label>Email Sent Date</label>
    <type>Date</type>
</CustomField>