force-app/main/default/objects/Invoice__c/fields/Email_TI__c.field-meta.xml
<CustomField>
    <fullName>Email_TI__c</fullName>
    <label>Email (Locked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>