force-app/main/default/objects/Invoice__c/fields/Expected_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Collection_Date__c</fullName>
    <label>Expected Collection Date</label>
    <type>Date</type>
</CustomField>