force-app/main/default/objects/Invoice__c/fields/Finance_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Email_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The finance team user on the branch</description>
    <label>Finance User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>