force-app/main/default/objects/Invoice__c/fields/Generate_IRN__c.field-meta.xml
<CustomField>
    <fullName>Generate_IRN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to generate IRN and QR</description>
    <label>Generate IRN</label>
    <type>Checkbox</type>
</CustomField>