force-app/main/default/objects/Invoice__c/fields/IGST_Amount_on_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_on_Credit_Note__c</fullName>
    <formula>IF(
    ISPICKVAL(Credit_Note_Type__c, &apos;Commercial&apos;),
    0,
    IF(
        OR( 
            ISPICKVAL(Opportunity_Name__r.Account.Account_Classification__c, &apos;SEZ without Tax&apos;),
            ISPICKVAL(Opportunity_Name__r.Account.Account_Classification__c, &apos;Export&apos;)
        ), 
        0,
        Credit_Note__c * IGST_Rate_for_Invoice_Amount__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount on Credit Note</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>