force-app/main/default/objects/Invoice__c/fields/IGST_Amount_on_Credit_Note_TI__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_on_Credit_Note_TI__c</fullName>
    <label>IGST Amount on Credit Note (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>