force-app/main/default/objects/Invoice__c/fields/IGST_Rate_for_Credit_Note_TI__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Credit_Note_TI__c</fullName>
    <label>IGST Rate for Credit Note (Locked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>